clang/test/BSC/Negative/Trait/GenericTrait/typedef_trait/typedef_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

typedef trait F<T> {
  T foo(This* this, int a);
}G; // expected-error {{expected ';' after trait}}
// expected-error@-1 {{a type specifier is required for all declarations}}